deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: debproxy
  namespace: debproxy
spec:
  selector:
    app: debproxy
  ports:
    - name: http
      port: 8080
      targetPort: 8080
